# ruby-wasm

./: '  .gitignore  Cargo.toml  README.md  a.html  a.wasm  a.wat  bak_core_generated.wat  core.wat  core_generated.wat  generate-core.fasl  generate-core.lisp  if.rb  output.wat  rust_std_macros.md  test.wasm  test.wat
crates/macro/: Cargo.toml
crates/wasm_instr/: Cargo.toml
crates/wasm_instr/src/: lib.rs
crates/wat/: Cargo.toml
crates/wat_defs/: Cargo.toml
crates/wat_macro/: Cargo.toml
demo/: game_of_life.rb  index.html
docs/: index.html  ruby.rb  ruby.wasm  ruby.wat
notes/: "For future consideration".md  Add basic stdlib methods for numbers, strings.md  Add internal hash table implementation.md  AoT Compiler Limitations.md  Books.md  Codegen for Wasm <-> Javascript FFI.md  Codegen for integer operations.md  Codegen for interned symbols.md  Codegen to Wasm binary format.md  Design Decisions.md  Document how we'll use Ruby spec.md  Document integration, e2e testing structure, environment.md  Document our stdlib strategy.md  Polish up the project documentation.md  Questions for Ladd.md  Research Prism's AST nodes, copy into my project mostly-wholesale.md  Research Wasm linking.md  Research class definition, object instantiation, method dispatch.md  Research parsing algorithms – recursive descent & Pratt parsing (again...).md  Research strings.md  Research, write up Wasm scope handling.md  Ruby Implementations.md  Ruby interpreter Wasm bundle size.md  Wasm.md
notes/Hoot/: Hoot Docs.md
notes/Lexing/: Modal Lexing.md
notes/Ruby/: Control structures.md  Object System.md  Ruby Spec.md  Truthiness.md
notes/Rust/: Allocation.md  Libraries of note.md  Tricks.md
notes/Sources/: Books.md  Prior Art.md  Sources.md
notes/Sprints/: Backlog.md  README.md  Sprint 1（08_24　ー　09_06）.md  Sprint 2（09_08　ー　09_12）.md  Sprint 3 （09_15　ー　09_18）.md  Sprint 4　（09_22　ー　09_26）.md  Sprint 5　（09_29　ー　10_03）.md  Sprint 6　（10_06　ー　10_10）.md  Week 0 (08-24 – 08-30).md  Week 0（08_24　ー　08_30）.md  Week 1（08_24　ー　09_）.md  Week 1（08_24　ー　________）.md
notes/Testing/: Rust-analyzer.md  Testing Strategy.md
notes/Wasm/: Rust to Wasm.md  Spec Glossary.md  Type Hierarchy.md  Utilities.md  Wasm Debugging.md  Wasm FAQs.md  Wasm Spec Glossary.md  Wasm.md
notes/args/: Dynamic Languages.md
notes/codegen/: Ergonomic AST building.md
notes/docs/: Value Representation.md
notes/parsing/: AST.md  Pratt Parsing.md  (+4 more)
resources/: wasm_runner.template.html
src/: arena_set.rs  binary.rs  compiler.rs  core.rs  corelib.rs  html.rs  lexeme.rs  lexeme_progress.txt  lexer.rs  lib.rs  main.rs  node.rs  parse.rs  parser.rs  print_wat.rs  run.rs  runtime.rs  token.rs  tokenize.rs  unitype.rs  wasm.rs  wat.rs
test_demo/: index.html  ruby.rb  ruby.wasm  ruby.wat  test.wasm  test.wat
tests/: array.rs  control_flow.rs  corelib.rs  demo.rs  global.rs  math.rs  method.rs  object.rs  strings.rs  to_wat.rs
wat-defs/: Cargo.toml
wat-macro/: Cargo.toml
(+105 files in other folders)
