[package]
name = "ruby_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1" # Base-64 conversion, for runnable .html output
clap = { version = "4.5.47", features = ["derive"] } # Command-line parsing
expect-test = "1.5.1" # Barebones snapshot testing
serde = { version = "1.0.226", features = ["derive"] }
serde-lexpr = "0.1.3" # Serialize to sexpr
wat = { version = "1.239.0", default-features = false } # .wat -> .wasm conversion
