[package]
name = "ruby-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1" # Base-64 conversion, for runnable .html output
clap = { version = "4.5.47", features = ["derive"] } # Command-line parsing
expect-test = "1.5.1" # Barebones snapshot testing
serde = { version = "1.0.226", features = ["derive"] }
serde-lexpr = "0.1.3" # Serialize to sexpr
wat = { version = "1.239.0", default-features = false } # .wat -> .wasm conversion
wasm-instr = { path = "crates/wasm_instr", version = "0.1.0" }
wat-defs = { path = "crates/wat_defs", version = "0.1.0" }
wat-macro = { path = "crates/wat_macro", version = "0.1.0" }
# Basically a wrapper over `Vec<T>` that disallows deletion for stable indicies.
# I wouldn't include it, but Walrus uses it, and I didn't want to re-write the sections I copied.
id-arena = "2.2.1"
pretty = "0.12.4"
wasmtime = "37.0.1"
