[workspace]
resolver = "3"
members = ["wasm-instr", "wat-defs", "wat-macro"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
expect-test = "1.5.1" # Barebones snapshot testing
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = "2.0.106"
wasm-instr = { path = "wasm-instr" }
wat-defs = { path = "wat-defs" }
wat-macro = { path = "wat-macro" }

[package]
name = "ruby-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1" # Base-64 conversion, for runnable .html output
clap = { version = "4.5.47", features = ["derive"] } # Command-line parsing
expect-test.workspace = true
serde = { version = "1.0.226", features = ["derive"] }
serde-lexpr = "0.1.3" # Serialize to sexpr
wat = { version = "1.239.0", default-features = false } # .wat -> .wasm conversion
# Basically a wrapper over `Vec<T>` that disallows deletion for stable indicies.
# I wouldn't include it, but Walrus uses it, and I didn't want to re-write the sections I copied.
id-arena = "2.2.1"
pretty = "0.12.4"
wasmtime = "37.0.1"
wasm-instr.workspace = true
wat-defs.workspace = true
wat-macro.workspace = true
